# scc-ygm

./: CMakeLists.txt  Makefile  README.md
cmake/: setup_boost.cmake
data/: Wiki-Vote.txt  edges.txt
src/: CMakeLists.txt  main.cpp  scc-sequential.cpp  scc-ygm.cpp
